pkgs/typed-racket-pkgs/typed-racket-test/tests/typed-racket/fail/define-values-bottom.rkt
#;
(exn-pred "runtime")
#lang typed/racket

(define-values (a b)
  (error 'runtime))

b
